--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
     <h1>ACG 钱包下载</h1>
     <div class="content">
-        <a href="./acg.apk" class="button" download="acg.apk">个人版（安卓）</a>
-        <a href="./acgpro.apk" class="button" download="acgpro.apk">网关版（安卓）</a>
+        <a href="./acg.apk" type="button" class="button" download="acg.apk">个人版（安卓）</a>
+        <a href="./acgpro.apk" type="button" class="button" download="acgpro.apk">网关版（安卓）</a>
     </div>
 </body>
 
